[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.136.0",
    "langchain-google-genai>=4.2.2",
    "langgraph>=1.1.8",
    "pydantic>=2.13.2",
    "requests>=2.33.1",
]
