[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioboto3>=15.5.0",
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.136.0",
    "langchain>=1.2.15",
    "langchain-google-genai>=4.2.2",
    "langgraph>=1.1.8",
    "langgraph-checkpoint-postgres>=3.0.5",
    "psycopg[binary,pool]>=3.3.3",
    "pydantic>=2.13.2",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
